Major Update: Smart Scheduler + Enhanced Priority System - Smart Scheduler: Aligns signal checks with candle closes - Priority System: PostgreSQL-based analytics - Database: Complete migration and setup automation - Commands: timer, schedule, analytics, utilization

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,55 @@
 DISCORD_TOKEN=your_discord_bot_token_here
 DISCORD_CHANNEL_ID=your_discord_channel_id_here
 
-# API Configuration  
-API_BASE_URL=http://localhost:5000
-CHECK_INTERVAL=1600
+# PostgreSQL Database Configuration
+DATABASE_URL=postgresql://username:password@hostname:5432/database_name
+
+# Alternative format for Railway/Heroku/etc:
+# DATABASE_URL=postgres://username:password@hostname:5432/database_name
+
+# For local development, you might use:
+# DATABASE_URL=postgresql://postgres:password@localhost:5432/discord_bot_db
+
+# API Configuration
+API_URL=http://localhost:8000
+API_USERNAME=your_api_username
+API_PASSWORD=your_api_password
+
+# Bot Settings
+CHECK_INTERVAL=300
+RESTART_ON_ERROR=true
+MAX_RETRIES=3
+NOTIFICATION_COOLDOWN=900
+
+# Health Check Settings
+HEALTH_CHECK_INTERVAL=3600
+DISCORD_AUTO_RESTART=true
+
+# Logging
+LOG_LEVEL=INFO
+LOG_FILE=bot.log
+
+# Database Settings
+DB_POOL_MIN_SIZE=1
+DB_POOL_MAX_SIZE=5
+DB_CLEANUP_DAYS=30
+
+# Priority Management Settings
+MIN_PRIORITY_LEVEL=MEDIUM
+PRIORITY_CRITICAL_THRESHOLD=90
+PRIORITY_HIGH_THRESHOLD=70
+PRIORITY_MEDIUM_THRESHOLD=50
+PRIORITY_LOW_THRESHOLD=30
+
+# VIP Assets (get priority treatment)
+VIP_TICKERS=SPY,QQQ,AAPL,TSLA,NVDA,MSFT,GOOGL,AMZN,META,BTC-USD,ETH-USD
+VIP_TIMEFRAMES=1d,4h
+
+# Advanced Priority Settings
+ONLY_CRITICAL_ALERTS=false
+SUPPRESS_WEAK_SIGNALS=true
+MAX_ALERTS_PER_HOUR=10
+PRIORITY_BOOST_MULTIPLIER=1.0
 
 # Trading Configuration
 TICKERS=AAPL,TSLA,NVDA,SPY,QQQ,MSFT,GOOGL,AMZN,META,BTC-USD,ETH-USD
