--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ python-dotenv>=1.0.0
 pandas>=2.0.0
 numpy>=1.24.0
 
+# Machine Learning (for advanced analytics)
+scikit-learn>=1.3.0
+
 # Date/Time Handling
 python-dateutil>=2.8.0
 
